K8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: worker, namespace: msas, labels: { app: worker } }
spec:
  replicas: 1
  selector: { matchLabels: { app: worker } }
  template:
    metadata: { labels: { app: worker } }
    spec:
      containers:
        - name: worker
          image: us-central1-docker.pkg.dev/DEM_UCS_PROJECT/msas/msas-worker:v2
