K8s/rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: rest, namespace: msas, labels: { app: rest } }
spec:
  replicas: 1
  selector: { matchLabels: { app: rest } }
  template:
    metadata: { labels: { app: rest } }
    spec:
      containers:
        - name: rest
          image: us-central1-docker.pkg.dev/DEM_UCS_PROJECT/msas/msas-rest:v1
          ports: [{ containerPort: 5000 }]
          readinessProbe:
            httpGet: { path: "/", port: 5000 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: 5000 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata: { name: rest-service, namespace: msas }
spec:
  selector: { app: rest }
  ports:
    - { name: http, port: 5000, targetPort: 5000 }
  type: ClusterIP
